tolk-tester/tests/invalid-syntax/err-3359.tolk
fun main() {
    return grams("-.");
}

/**
@compilation_should_fail
@stderr argument is not a valid number like "0.05"
 */
